; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_tt.c_GetUINT32.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_tt.c_GetUINT32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HPDF_OK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i64*)* @GetUINT32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @GetUINT32(i32 %0, i64* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64* %1, i64** %5, align 8
  store i32 8, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i64*, i64** %5, align 8
  %10 = bitcast i64* %9 to i32*
  %11 = call i64 @HPDF_Stream_Read(i32 %8, i32* %10, i32* %7)
  store i64 %11, i64* %6, align 8
  %12 = load i64, i64* %6, align 8
  %13 = load i64, i64* @HPDF_OK, align 8
  %14 = icmp ne i64 %12, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = load i64*, i64** %5, align 8
  store i64 0, i64* %16, align 8
  %17 = load i64, i64* %6, align 8
  store i64 %17, i64* %3, align 8
  br label %22

18:                                               ; preds = %2
  %19 = load i64*, i64** %5, align 8
  %20 = call i32 @UINT32Swap(i64* %19)
  %21 = load i64, i64* @HPDF_OK, align 8
  store i64 %21, i64* %3, align 8
  br label %22

22:                                               ; preds = %18, %15
  %23 = load i64, i64* %3, align 8
  ret i64 %23
}

declare dso_local i64 @HPDF_Stream_Read(i32, i32*, i32*) #1

declare dso_local i32 @UINT32Swap(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
